--- a/tic-tac-toe/css/style.css
+++ b/tic-tac-toe/css/style.css
@@ -1,12 +1,16 @@
+html{
+  height: 100%
+}
+
 body{
 	background-color: #000;
 	color: #a8a8a8;
+  height: 100%;
 }
 
 .container {
      max-width: 960px;
      margin-top: 50px;
-     margin-bottom: 50px;
      border-radius: 15px;
   }
 
@@ -26,7 +30,13 @@ th{
     border-radius: 5px;
     margin: 0 auto;
     float: none;
-    font-size: 96px;
+    font-size: 36px;
+}
+
+@media (min-width: 768px){
+  .table{
+    font-size: 82px;
+  }  
 }
 
 .v{
@@ -44,26 +54,79 @@ th{
 }
 
 .square{
-  height: 175px;
-  width: 175px;
+  height: 75px;
+  width: 75px;
+}
+
+@media (min-width: 768px){
+  .square{
+    height: 150px;
+    width: 150px;
+  }  
 }
 
 #score{
-  font-size: 48px;
+  font-size: 28px;
 }
 
-#xoro{
-  font-size: 48px;
+@media (min-width: 768px){
+  #score{
+    font-size: 48px;
+  }  
 }
 
 #winner{
-  font-size: 48px;
+  font-size: 28px;
+}
+
+@media (min-width: 768px){
+  #winner{
+    font-size: 48px;
+  }  
+}
+
+.token{
+  width: 75px;
+  border-radius: 50%;
+}
+
+#rematch{
+  border-radius: 15px;
 }
 
 button{
-  font-size: 48px;
+  font-size: 28px;
   margin: 25px;
   padding: 0 15px 0 15px;
   color: black;
   background-color: #a8a8a8;
+  
 }
+
+@media (min-width: 768px){
+  button{
+    font-size: 48px;
+    margin: 25px;
+    padding: 0 15px 0 15px;
+    color: black;
+    background-color: #a8a8a8;
+  }
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+} 
+
