--- a/simon/css/style.css
+++ b/simon/css/style.css
@@ -10,18 +10,22 @@ body{
 	border-radius: 50%;
 	background-color: #404040;
 	width: 480px;
-	padding-top: 480px;
+	height: 480px;
+	padding: 33px;
 	margin: 0 auto;
 	margin-top: 50px;
 	margin-bottom: 50px;
+	overflow: hidden;
 	position: relative;
 }
 
 #namePlate{
 	border-radius: 50%;
+	border: 3px solid #404040;
 	width: 50%;
 	height: 50%;
 	position: absolute;
+	overflow: hidden;
 	top: 50%;
 	left: 50%;
 	margin: -120px 0px 0px -120px;
@@ -44,7 +48,7 @@ body{
 	width: 50px;
 	font-size: 12px;
 	margin: 0 auto;
-	margin-top: 10px;
+	margin-top: 5px;
 }
 
 #btnStart{
@@ -100,4 +104,58 @@ body{
 	left: 25%;
 	margin: -20px 0px 0px -25px;
 	position: absolute;
+}
+
+#power{
+	top: 25%;
+	position: relative;
+	color: black;
+}
+	
+#green{
+	position: absolute;
+  	background-color: green;
+  	width: 220px;
+  	height: 220px;
+  	margin: -20px 0 0 -20px;
+	border-top-left-radius: 100%;
+  	overflow: hidden;
+}
+
+#red{
+	position: absolute;
+  	background-color: red;
+  	left: 240px;
+  	width: 220px;
+  	height: 220px;
+  	margin: -20px 0 0 5px;
+	border-top-right-radius: 100%;
+  	overflow: hidden;
+}
+
+#yellow{
+	position: absolute;
+  	background-color: yellow;
+  	width: 220px;
+  	height: 220px;
+  	top: 240px;
+  	margin: 5px 0 0 -20px;
+	border-bottom-left-radius: 100%;
+  	overflow: hidden;
+}
+
+#blue{
+	position: absolute;
+  	background-color: blue;
+  	width: 220px;
+  	height: 220px;
+  	top: 240px;
+  	left: 240px;
+  	margin: 5px 0 0 5px;
+	border-bottom-right-radius: 100%;
+  	overflow: hidden;
+}
+
+.color{
+	overflow: hidden;
 }
